// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui/panel/panelheadercomment > should construct. 1`] = `
<div
  className="msla-panel-comment-container"
>
  <CustomizedIconButton
    aria-expanded={true}
    ariaLabel="Hide description"
    className="msla-panel-comment-toggle-inline"
    iconProps={
      {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
    title="Hide description"
  />
  <StyledTextFieldBase2
    ariaLabel="Description"
    autoAdjustHeight={true}
    borderless={true}
    className="msla-card-comment"
    componentRef={
      {
        "current": null,
      }
    }
    maxLength={256}
    multiline={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="Add a description"
    resizable={false}
    styles={
      {
        "field": {
          "backgroundColor": "#faf9f8",
          "fontSize": undefined,
          "lineHeight": undefined,
          "maxHeight": "25vh",
          "overflowY": "auto",
          "paddingLeft": "28px",
          "paddingRight": "8px",
        },
        "fieldGroup": {
          "maxHeight": "25vh",
          "position": "relative",
        },
        "root": {
          "display": "block",
          "marginTop": 0,
        },
      }
    }
    value=""
  />
</div>
`;

exports[`ui/panel/panelheadercomment > should construct. 2`] = `
<div
  className="msla-panel-comment-container"
>
  <CustomizedIconButton
    aria-expanded={true}
    ariaLabel="Hide description"
    className="msla-panel-comment-toggle-inline"
    iconProps={
      {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
    title="Hide description"
  />
  <StyledTextFieldBase
    ariaLabel="Description"
    autoAdjustHeight={true}
    borderless={true}
    className="msla-card-comment"
    componentRef={
      {
        "current": null,
      }
    }
    maxLength={256}
    multiline={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="Add a description"
    resizable={false}
    styles={
      {
        "field": {
          "backgroundColor": "#faf9f8",
          "fontSize": undefined,
          "lineHeight": undefined,
          "maxHeight": "25vh",
          "overflowY": "auto",
          "paddingLeft": "28px",
          "paddingRight": "8px",
        },
        "fieldGroup": {
          "maxHeight": "25vh",
          "position": "relative",
        },
        "root": {
          "display": "block",
          "marginTop": 0,
        },
      }
    }
    value=""
  />
</div>
`;
